# trictrac

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  devenv.nix  devenv.yaml  flake.nix  justfile  module.nix
bot/: Cargo.toml
bot/python/: test.py
bot/scripts/: train.sh  trainValid.sh
bot/src/: lib.rs  strategy.rs  training_common.rs  training_common_big.rs  trictrac_board.rs
bot/src/burnrl/: dqn_big_model.rs  dqn_model.rs  environment.rs  environment_big.rs  environment_valid.rs  main.rs  mod.rs  ppo_model.rs  sac_model.rs  utils.rs  utils_wip.rs
bot/src/burnrl/algos/: dqn.rs  dqn_valid.rs  mod.rs  ppo.rs  ppo_big.rs  ppo_valid.rs  sac_big.rs  sac_valid.rs
bot/src/burnrl/dqn/: dqn_model.rs  main.rs  utils.rs
bot/src/burnrl/dqn_big/: dqn_model.rs  main.rs  mod.rs  utils.rs
bot/src/burnrl/dqn_valid/: dqn_model.rs  main.rs  utils.rs
bot/src/burnrl/ppo/: main.rs  mod.rs  ppo_model.rs  utils.rs
bot/src/burnrl/sac/: main.rs  mod.rs  sac_model.rs  utils.rs
bot/src/dqn/: dqn_common.rs  dqn_common_big.rs  mod.rs
bot/src/dqn/burnrl/: dqn_model.rs  environment.rs  main.rs  utils.rs
bot/src/dqn/burnrl_before/: dqn_model.rs  main.rs  utils.rs
bot/src/dqn/burnrl_big/: dqn_model.rs  environment.rs  environmentDiverge.rs  main.rs  mod.rs  utils.rs
bot/src/dqn/burnrl_valid/: dqn_model.rs  environment.rs  main.rs  utils.rs
bot/src/dqn/simple/: dqn_model.rs  dqn_trainer.rs  main.rs  mod.rs
bot/src/dqn_simple/: dqn_model.rs  dqn_trainer.rs  main.rs  mod.rs
bot/src/strategy/: burn_dqn_agent.rs  burn_dqn_strategy.rs  burn_environment.rs  client.rs  default.rs  dqn.rs  dqn_common.rs  dqn_trainer.rs  dqnburn.rs  erroneous_moves.rs  mod.rs  random.rs  stable_baselines3.rs
client/: Cargo.toml
client/src/: main.rs
client_bevy/.cargo/: config.toml
client_bevy/src/: main.rs
client_cli/: Cargo.toml
client_cli/src/: app.rs  game_runner.rs  main.rs
client_tui/: Cargo.toml
client_tui/src/: app.rs  event.rs  main.rs  tui.rs  ui.rs
client_web/: Cargo.toml  index.html
client_web/assets/: style.css
client_web/locales/: en.json  fr.json
client_web/src/: app.rs  main.rs  sound.rs
client_web/src/components/: board.rs  connecting_screen.rs  die.rs  game_screen.rs  login_screen.rs  mod.rs  score_panel.rs  scoring.rs
client_web/src/trictrac/: backend.rs  bot_local.rs  types.rs
clients/backbone-lib/: Cargo.toml
clients/backbone-lib/src/: client.rs  host.rs  lib.rs  platform.rs  protocol.rs  session.rs  traits.rs
clients/cli/: Cargo.toml
clients/cli/src/: app.rs  game_runner.rs
clients/web/: Cargo.toml  Trunk.toml  index.html
clients/web-game/: Cargo.toml
clients/web-game/assets/: style.css
clients/web-game/locales/: en.json  fr.json
clients/web-game/src/: app.rs  main.rs  sound.rs
clients/web-game/src/components/: board.rs  connecting_screen.rs  die.rs  game_screen.rs  login_screen.rs  mod.rs  (+1 more)
clients/web-user-portal/: Cargo.toml  Trunk.toml  index.html
clients/web-user-portal/assets/: style.css
clients/web-user-portal/src/: api.rs  app.rs
clients/web-user-portal/src/pages/: game.rs  home.rs  mod.rs  profile.rs
clients/web/assets/: style.css
clients/web/locales/: en.json  fr.json
clients/web/pages/: readme.txt
clients/web/pages/about/: en.md  fr.md
clients/web/pages/legal/: en.md  fr.md
clients/web/src/: api.rs  app.rs  main.rs  nav.rs
clients/web/src/game/: mod.rs  session.rs  sound.rs
clients/web/src/game/components/: board.rs  game_screen.rs  mod.rs  score_panel.rs  scoring.rs
clients/web/src/game/trictrac/: backend.rs  bot_local.rs  mod.rs  types.rs
clients/web/src/portal/: account.rs  content_page.rs  forgot_password.rs  game_detail.rs  lobby.rs  mod.rs  profile.rs  reset_password.rs  verify_email.rs
container/: flake.nix
doc/: backlog.md  client_web_design_proposals.md  client_web_design_proposals_alternative.md  client_web_overview.md  journal.md  plan_cxxbindings.md  python.md  python_research.md  research.md  spiel_bot_parallel.md  store_overview.md  store_research.md  tensor_research.md  traité.md  trictrac_rules.md  tutorial.md  vocabulary.md
doc/ai/history/: claudeAIquestion.md
doc/blog/: game-state-notation.md  pourquoi-le-trictrac.md
doc/design/snapshots/: 2026-05-30-d4a2ea1c531827bfbc2410af20a00e349d606c87.html  2026-06-06-7b036e3ee1a8d3d686a664d74717fd23df1d3169.html
doc/design/variations/: 01-dice-sidebar.html  02-horizontal-header.html  03-dark-modern.html  04-warm-bottom-scoring.html  05-warm-sticky-header.html  06-wide-header.html  07-scrolling-header.html
doc/refs/: claudeAIquestionOnlyRust.md  dqn-burn.md  geminiQuestions.md  inspirations.md  journal.md  laws_and_rules_of_trictrac.md  lois_et_regles_du_trictrac.md  outputs.md  specifications.md  tutorial_academieDesJeux.md  vocabulary.md
doc/refs/bot_rl/: spiel_bot_research.md
doc/specs/: diagrammes.md  store.puml
doc/store_diagrams/: workflow.md
doc/ui-mockup/: inGame-moving.html  inGame-pointsForOpponent.html  inGame-pointsForUser.html  style.css
server/: Cargo.toml
server/protocol/: Cargo.toml
server/protocol/src/: lib.rs
server/relay-server/: Cargo.toml  GameConfig.json
server/relay-server/migrations/: 001_init.sql  002_participants_unique.sql  003_email_verification.sql
server/relay-server/src/: auth.rs  db.rs  hand_shake.rs  http.rs  lobby.rs  main.rs  message_relay.rs  smtp.rs
server/src/: main.rs
spiel_bot/: Cargo.toml
spiel_bot/benches/: alphazero.rs
spiel_bot/src/: lib.rs  strategy.rs
spiel_bot/src/alphazero/: mod.rs  replay.rs  selfplay.rs  trainer.rs
spiel_bot/src/dqn/: episode.rs  mod.rs  trainer.rs
spiel_bot/src/env/: mod.rs  trictrac.rs
spiel_bot/src/mcts/: mod.rs  node.rs  search.rs
spiel_bot/src/network/: mlp.rs  mod.rs  qnet.rs  resnet.rs
spiel_bot/tests/: integration.rs
store/: Cargo.toml  build.rs  pyproject.toml
store/python/: test.py  trainModel.py  trictracEnv.py
store/src/: board.rs  cxxengine.rs  dice.rs  engine.rs  error.rs  game.rs  game_rules_moves.rs  game_rules_points.rs  lib.rs  player.rs  pyengine.rs  training_common.rs
(+3 files in other folders)
