[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "train_dqn"
path = "src/bin/train_dqn.rs"

[[bin]]
name = "train_burn_rl"
path = "src/bin/train_burn_rl.rs"

[[bin]]
name = "train_dqn_full"
path = "src/bin/train_dqn_full.rs"

[dependencies]
pretty_assertions = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
store = { path = "../store" }
rand = "0.8"
env_logger = "0.10"
burn = { version = "0.17", features = ["ndarray", "autodiff"] }
burn-rl = { git = "https://github.com/yunjhongwu/burn-rl-examples.git", package = "burn-rl" }
