[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "burn_train"
path = "src/burnrl/main.rs"

[[bin]]
name = "train_dqn_burn_valid"
path = "src/burnrl/dqn_valid/main.rs"

[[bin]]
name = "train_dqn_burn_big"
path = "src/burnrl/dqn_big/main.rs"

[[bin]]
name = "train_dqn_burn"
path = "src/burnrl/dqn/main.rs"

[[bin]]
name = "train_sac_burn"
path = "src/burnrl/sac/main.rs"

[[bin]]
name = "train_ppo_burn"
path = "src/burnrl/ppo/main.rs"

[[bin]]
name = "train_dqn_simple"
path = "src/dqn_simple/main.rs"

[dependencies]
pretty_assertions = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
store = { path = "../store" }
rand = "0.8"
env_logger = "0.10"
burn = { version = "0.17", features = ["ndarray", "autodiff"] }
burn-rl = { git = "https://github.com/yunjhongwu/burn-rl-examples.git", package = "burn-rl" }
log = "0.4.20"
