[package]
name = "trictrac-client_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
pico-args = "0.5.0"
pretty_assertions = "1.4.0"
renet = "0.0.13"
trictrac-store = { path = "../store", features = ["python"] }
trictrac-bot   = { path = "../bot" }
spiel_bot      = { path = "../spiel_bot" }
itertools = "0.13.0"
env_logger = "0.11.6"
log = "0.4.20"
