[package]
name = "client_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
crossterm = "0.27.0"
ratatui = "0.24.0"
renet = "0.0.13"
store = { path = "../store" }
