[package]
name = "client_web"
version = "0.1.0"
edition = "2021"

[dependencies]
trictrac-store  = { path = "../store" }
backbone-lib    = { path = "../../forks/multiplayer/backbone-lib" }
leptos          = { version = "0.7", features = ["csr"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1"
futures         = "0.3"
gloo-storage    = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
# getrandom 0.3 requires an explicit WASM backend; "wasm_js" uses window.crypto.getRandomValues.
# Must be a direct dependency (not just transitive) for the feature to take effect.
getrandom = { version = "0.3", features = ["wasm_js"] }
