[package]
name    = "spiel_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
trictrac-store = { path = "../store", features = ["python"] }
trictrac-bot   = { path = "../bot" }
anyhow         = "1"
rand           = "0.9"
rand_distr     = "0.5"
burn           = { version = "0.20", features = ["ndarray", "autodiff"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "alphazero"
harness = false
