[package]
name = "trictrac-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trictrac_store"
# "cdylib"   → Python .so built by maturin (pyengine)
# "rlib"     → used by other workspace crates (bot, client_cli)
# "staticlib" → used by the C++ OpenSpiel game (cxxengine)
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
# Enable Python bindings (required for maturin / AI training). Not available on wasm32.
python = ["pyo3"]
# Enable C++ bridge for OpenSpiel integration. Not available on wasm32.
cpp = ["dep:cxx"]

[dependencies]
anyhow = "1.0"
base64 = "0.21.7"
cxx = { version = "1.0", optional = true }
# provides macros for creating log messages to be used by a logger (for example env_logger)
log = "0.4.20"
merge = "0.1.0"
# generate python lib (with maturin) to be used in AI training
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py38"], optional = true }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
transpose = "0.2.2"

[[bin]]
name = "random_game"
path = "src/bin/random_game.rs"

[build-dependencies]
cxx-build = "1.0"
