[package]
name = "trictrac-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trictrac_store"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
base64 = "0.21.7"
# provides macros for creating log messages to be used by a logger (for example env_logger)
log = "0.4.20"
merge = "0.1.0"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
transpose = "0.2.2"

[[bin]]
name = "random_game"
path = "src/bin/random_game.rs"
